# glade-gui

./: .ycm_extra_conf.py  CMakeLists.txt  README.md
cmake/: FindGTK.cmake  FindGTK.cmake.old
res/gui/: mywindow.glade
src/: CMakeLists.txt  CMakeLists.txt.old  a.out  main.c
